@@ -405,7 +405,7 @@
 									<br>
 								</div>
 								<div class="span6">
-									<h2><span data-i18n="Custom HTTP">Custom HTTP</span>:</h2>
+									<h2><span data-i18n="Custom HTTP">Custom HTTP</span>/<span data-i18n="Action">Action</span>:</h2>
 									<table class="display" id="httptable" border="0" cellpadding="0" cellspacing="0">
 									<tr>
 										<td align="right" style="width:80px"><label for="HTTPEnabled"><span data-i18n="Enabled"></span>: </label></td>
@@ -432,8 +432,12 @@
 										<td><input type="input" id="HTTPTo" name="HTTPTo" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
 									</tr>
 									<tr>
-										<td align="right"><label for="HTTPURL"><span data-i18n="URL"></span>: </label></td>
-										<td><textarea id="HTTPURL" name="HTTPURL" rows="4" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" />  <button data-i18n="Test" class="btn btn-info" ng-click="TestNotification('http')">Test</button></td>
+										<td align="right"><label for="HTTPURL"><span data-i18n="URL"></span>/<span data-i18n="Action"></span>: </label></td>
+										<td>
+											<textarea id="HTTPURL" name="HTTPURL" rows="4" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" />  <button data-i18n="Test" class="btn btn-info" ng-click="TestNotification('http')">Test</button><br>
+											<span data-i18n="(Should start with http:// or script://)">(Should start with http:// or script://)</span><br>
+											<span data-i18n="(Optional)">(Optional)</span> #SUBJECT, #MESSAGE
+										</td>
 									</tr>
 									</table>
 								</div>
