@@ -91,6 +91,8 @@ Version 2.0.xxxx (xxxx 2015)
 - Changed: Better new update notification when launching browser
 - Implemented: MySensors, V_CURRENT
 - Updated: HarmoneyHub class (Thanks to Jan)
+- Fixed: HTTP Notification
+- Changed: HTTP Notification, can now handle both HTTP and Scripts
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
